bochs (2.2.6-2) UNRELEASED; urgency=low

  * Fix typos in bochsrc(5). (Closes: #356012)
    - debian/patches/01_man.patch: New file.
    Thanks to A Costa <agcosta@gis.net>.

 -- Guillem Jover <guillem@debian.org>  Tue, 21 Mar 2006 02:31:22 +0200

bochs (2.2.6-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/01_doc.patch: Integrated upstream. Remove.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/00_base.patch: Sync.
    - debian/patches/02_libtool.patch: Likewise.
  * Do not install ROM BIOS that are not built anymore.
  * Do not create a fake stamp file for the ROM BIOS.
  * Fix debian/sb16ctrl.1:
    - Change the SEE ALSO references to be bold.
    - Escaped some hyphens.
    - Reindent the Bochs Online Documentation's URL.
  * Build the svga module on amd64. (Closes: #346577)
    Thanks to Kaare Hviid <ukh@svansen.se> for the initial patch.

 -- Guillem Jover <guillem@debian.org>  Thu,  9 Feb 2006 04:30:50 +0200

bochs (2.2.5-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Synced.
    - debian/patches/01_doc.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
  * Debconf templates:
    - Added Spanish. (Closes: #333897)
      Thanks to César Gómez Martín <cesar.gomez@gmail.com>.
    - Added Swedish. (Closes: #330987)
      Thanks to Daniel Nylander <po@danielnylander.se>.
    - Added Portuguese. (Closes: #338892)
      Thanks to Simão Pedro Cardoso <pthell@gmail.com>.
  * Include pci plugins into bochs package. (Closes: #341436)
    Thanks to Robert Millan <rmh@aybabtu.com>
  * Fix more typos in bochs and bochsrc manpages. (Closes: #335334, #335336)
    Thanks to A Costa <agcosta@gis.net>.
  * Wrap lines in debian/control fields (knowingly breaking policy).
  * Switch to debhelper compat level 5.
  * Build-Conflict against libwxgtk2.6-dev as it FTBFS if present.
  * Clean up debian/patch.mk:
    - Rename clean to unpatch.